GRAILS-11023 improve grails startup time by tuning JVM parameters